--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>MayMyIndia</title>
+  <title>Map My India</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <script src="https://apis.mapmyindia.com/advancedmaps/v1/397e77ca-d40e-4123-9a36-58c88e588e9f/map_load?v=1.3&plugin=polylinedecorator,path.drag"></script>
+  <!-- <script src="https://apis.mapmyindia.com/advancedmaps/v1/397e77ca-d40e-4123-9a36-58c88e588e9f/map_load?v=1.3&plugin=polylinedecorator,path.drag"></script> -->
+
+  <script src="https://apis.mapmyindia.com/advancedmaps/v1/397e77ca-d40e-4123-9a36-58c88e588e9f/map_load?v=1.3&plugin=cluster"></script>
 </head>
 <body>
   <app-root></app-root>
